# runa

./: LICENSE  README.md  me.breakgim.runa.yml  meson.build
data/: me.breakgim.runa.desktop.in  me.breakgim.runa.gschema.xml  me.breakgim.runa.metainfo.xml  meson.build
src/: auth.py  main.py  main.ui  meson.build  runa.in
